<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brunstkalender</string>
    
    <string name="action_settings">Inställningar</string>
    
    <string name="action_delete">Ta bort</string>
    <string name="action_erase">Radera</string>
    <string name="action_save">Spara</string>
    
    <string name="button_save">Spara</string>
    <string name="button_update">Uppdatera</string>
    <string name="button_delete">Ta bort</string>
    <string name="button_new_short">N</string>
    <string name="button_edit_short">R</string>
    <string name="button_delete_short">X</string>
    
    <string name="context_menu_delete">Ta bort</string>
    
    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nej</string>
    <string name="dialog_cancel">Avbryt</string>
    <string name="dialog_choose">Välj</string>
    <string name="dialog_ask_delete_site">Ta bort</string>
    <string name="dialog_ask_delete_individual">Ta bort</string>
    <string name="dialog_ask_delete_note">Ingen text. Ta bort anteckning?</string>
    <string name="dialog_ask_erase_text">Radera text?</string>
    <string name="dialog_ask_save">Spara</string>
    <string name="dialog_pick_image">Välj en bild</string>
    <string name="dialog_pick_number">Välj</string>
    
    <string name="event_type_reminder">Påminnelse</string>
    <string name="event_type_note">Anteckning</string>
    <string name="event_type_heat">Brunst</string>
    <string name="event_type_mating">Parning</string>
    <string name="event_type_pregcheck">Dräktighetsundersökning</string>
    <string name="event_type_birth">Födelse</string>
    
    <string name="heat_activity_title">Brunst</string>
    <string name="heat_label_individual_title">Individ:</string>
    <string name="heat_label_lactationnr">Laktation nr</string>
    <string name="heat_label_heatround">Brunstomgång</string>
    <string name="heat_label_date">Datum</string>
    <string name="heat_label_time">Tid</string>
    <string name="heat_label_sign">Tecken</string>
    <string name="heat_label_strength">Styrka</string>
    <string name="heat_label_remind">Påminn om (dagar)</string>
    <string name="heat_label_note">Anteckning</string>
    <string name="heat_listrow_line1_hint">Datum och tid</string>
    <string name="heat_listrow_line2_hint">Omgång och tecken</string>
    <string name="heat_sign_unrest">Oro</string>
    <string name="heat_sign_discharge">Flytning</string>
    <string name="heat_sign_riding">Ridning</string>
    <string name="heat_sign_sag">Svank</string>
    <string name="heat_sign_swelling">Svullnad</string>
    <string name="heat_sign_lowmilk">Lite mjölk</string>
    <string name="heat_strength_1">1. Osäker</string>
    <string name="heat_strength_2">2. Svag</string>
    <string name="heat_strength_3">3. Trolig</string>
    <string name="heat_strength_4">4. Säker</string>
    <string name="heat_strength_5">5. Stark</string>
    
    <string name="individual">Individ</string>
    <string name="individual_edit_activity_title">Individ</string>
    <string name="individual_events_activity_title">Händelser</string>
    <string name="individual_label_idnr">ID-nr</string>
    <string name="individual_label_shortnr">Kortnr</string>
    <string name="individual_label_name">Namn</string>
    <string name="individual_label_active">Aktiv</string>
    <string name="individual_label_birthdate">Födelsedatum</string>
    <string name="individual_label_mother_idnr">Mor ID</string>
    <string name="individual_label_father_idnr">Far ID</string>
    <string name="individual_label_sex">Kön</string>
    <string name="individual_label_heatcyclus">Brunstcykel</string>
    <string name="individual_label_lactationnr">Laktationsnr</string>
    <string name="individual_label_lastbirth">Senaste kalvning</string>
    <string name="individual_label_events">Händelse</string>
    <string name="individual_sex_male">Tjur</string>
    <string name="individual_sex_female">Ko</string>
    
    <string name="note_activity_title">Anteckning</string>
    <string name="note_label_idnr">Anteckning för individ:</string>
    <string name="note_entry_hint">Max 200 tecken</string>
    <string name="note_listrow_line1_hint">Datum och tid</string>
    <string name="note_listrow_line2_hint">Anteckningens text</string>
    
    <string name="production_site">Produktionsplats</string>
    <string name="production_site_activity_title">Produktionsplats</string>
    <string name="production_site_label_number">Produktionsplatsnummer</string>
    <string name="production_site_label_name">Namn</string>
    <string name="production_site_label_address">Adress</string>
    <string name="production_site_label_coord">Koordinater</string>
    <string name="production_site_hint_street_address">Gatuadress</string>
    <string name="production_site_hint_postnr">Postnr</string>
    <string name="production_site_hint_postaddress">Postadress</string>
    <string name="production_site_hint_coord"></string>
    <string name="production_site_org_default">SE</string>
    
    <string name="reminder">Påminnelser</string>
    <string name="reminder_activity_title">Påminnelse</string>
    <string name="reminder_service_title">Påminnelsetjänst</string>
    <string name="reminder_label_eventtime">Förväntad tid</string>
    <string name="reminder_label_eventtype">Typ:</string>
    <string name="reminder_entry_description_hint">Beskrivning</string>
    <string name="reminder_label_interval">Påminnelseintervall</string>
    <string name="reminder_label_days">Dagar</string>
    <string name="reminder_label_hours">Timmar</string>
    <string name="reminder_button_remind_again">Påminn igen</string>
    <string name="reminder_button_remind_not">Påminn inte</string>
    <string name="reminder_expected_heat">Förväntad brunst</string>
    <string name="reminder_listrow1_hint">Datum och tid</string>
    <string name="reminder_listrow2_hint">Beskrivning</string>
    
    <string name="toast_could_not_save">Kunde inte spara</string>
    <string name="toast_could_not_fetch">Kunde inte hämta</string>
    <string name="toast_form_not_correct">Fel i formulär</string>
    <string name="toast_nothing_to_save">Ingenting att spara</string>

</resources>
