<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android_projekt.ReminderActivity" >

    <ImageView
        android:id="@+id/reminder_img"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="8dp"
        android:background="@color/orange_light"
        android:src="@drawable/ic_action_warning" />

    <TextView
        android:id="@+id/reminder_label_eventtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/reminder_img"
        android:layout_toRightOf="@id/reminder_img"
        android:ellipsize="marquee"
        android:hint="@string/reminder_listrow1_hint"
        android:singleLine="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/reminder_label_eventtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/reminder_img"
        android:layout_below="@id/reminder_img"
        android:layout_marginTop="12dp"
        android:ellipsize="marquee"
        android:text="@string/reminder_label_eventtype"
        android:singleLine="true"
        />
    
    <EditText
        android:id="@+id/reminder_entry_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/reminder_img"
        android:layout_below="@id/reminder_label_eventtype"
        android:layout_marginTop="8dp"
        android:text="@string/reminder_entry_description_hint"
        android:gravity="top"
        android:inputType="none"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:ellipsize="none"
        />
    
    <TextView
        android:id="@+id/reminder_label_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/reminder_img"
        android:layout_below="@id/reminder_entry_description"
        android:layout_marginTop="12dp"
        android:ellipsize="marquee"
        android:text="@string/reminder_label_interval"
        android:singleLine="true"
        />
    
    <TextView
        android:id="@+id/reminder_label_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/reminder_img"
        android:layout_below="@id/reminder_label_interval"
        android:layout_marginTop="20dp"
        android:layout_marginRight="8dp"
        android:text="@string/reminder_label_days"
        />
    
    <EditText 
        android:id="@+id/reminder_entry_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/reminder_label_days"
        android:layout_alignBaseline="@id/reminder_label_days"
        android:layout_marginRight="8dp"
        android:inputType="number"
        />
    
    <ImageButton
        android:id="@+id/reminder_imgbutton_edit_days"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignBottom="@id/reminder_label_days"
        android:layout_toRightOf="@id/reminder_entry_days"
        android:background="@drawable/button_bg_green"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_action_edit" />
    
    <TextView
        android:id="@+id/reminder_label_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/reminder_imgbutton_edit_days"
        android:layout_below="@id/reminder_label_interval"
        android:layout_marginTop="20dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/reminder_label_hours"
        />
    
    <EditText 
        android:id="@+id/reminder_entry_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/reminder_label_hours"
        android:layout_alignBaseline="@id/reminder_label_days"
        android:layout_marginRight="8dp"
        android:inputType="number"
        />
    
    <ImageButton
        android:id="@+id/reminder_imgbutton_edit_hours"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignBottom="@id/reminder_label_days"
        android:layout_toRightOf="@id/reminder_entry_hours"
        android:background="@drawable/button_bg_green"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_action_edit" />
    
    <Button 
        android:id="@+id/reminder_button_remind_not"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/reminder_label_days"
        android:layout_marginTop="24dp"
        android:text="@string/reminder_button_remind_not"
        />
    
    <Button 
        android:id="@+id/reminder_button_remind_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/reminder_button_remind_not"
        android:layout_alignBottom="@id/reminder_button_remind_not"
        android:layout_marginRight="8dp"
        android:text="@string/reminder_button_remind_again"
        />

</RelativeLayout>