<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android_projekt.individ.IndividualEditActivity" >

    <!-- android:textAppearance="?android:attr/textAppearanceMedium" -->

    <TextView
        android:id="@+id/individual_label_idnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/individual_entry_id_org"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="8dp"
        android:text="@string/individual_label_idnr" />

    <EditText
        android:id="@id/individual_entry_id_org"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/individual_entry_shortnr"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/individual_label_idnr"
        android:imeOptions="actionNext"
        android:maxLength="2"
        android:minEms="2"
        android:text="@string/production_site_org_default" />

    <EditText
        android:id="@+id/individual_entry_id_ppnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/individual_entry_id_org"
        android:layout_toRightOf="@id/individual_entry_id_org"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="6"
        android:minEms="4" />

    <EditText
        android:id="@+id/individual_entry_id_individnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/individual_entry_id_ppnr"
        android:layout_toRightOf="@id/individual_entry_id_ppnr"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="4"
        android:minEms="3" />

    <EditText
        android:id="@+id/individual_entry_id_checknr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/individual_entry_id_individnr"
        android:layout_toRightOf="@id/individual_entry_id_individnr"
        android:inputType="number"
        android:maxLength="1"
        android:minEms="1" />

    <TextView
        android:id="@+id/individual_label_shortnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/individual_entry_shortnr"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="8dp"
        android:text="@string/individual_label_shortnr" />

    <EditText
        android:id="@id/individual_entry_shortnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/individual_entry_id_org"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/individual_label_shortnr"
        android:inputType="number"
        android:maxLength="4"
        android:minEms="2"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/individual_imgbutton_thumb"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/individual_entry_shortnr"
        android:background="@drawable/button_bg_green"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_action_place" />

    <TextView
        android:id="@+id/individual_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/individual_entry_name"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="8dp"
        android:text="@string/individual_label_name" />

    <EditText
        android:id="@id/individual_entry_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/individual_imgbutton_thumb"
        android:layout_alignLeft="@id/individual_entry_shortnr"
        android:layout_below="@id/individual_entry_shortnr"
        android:layout_toRightOf="@id/individual_label_name"
        android:ellipsize="end"
        android:ems="6"
        android:inputType="text"
        android:lines="1"
        android:maxLength="40"
        android:scrollHorizontally="true"
        android:singleLine="true" />
    
    <TextView
        android:id="@+id/individual_label_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/individual_label_name"
        android:layout_below="@id/individual_entry_name"
        android:layout_marginTop="16dp"
        android:text="@string/individual_label_sex" />

    <Spinner
        android:id="@+id/individual_spinner_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/individual_label_sex"
        android:layout_below="@id/individual_label_sex"
        />

    <TextView
        android:id="@+id/individual_label_heatcyclus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/individual_label_sex"
        android:layout_centerHorizontal="true"
        android:text="@string/individual_label_heatcyclus" />

   <EditText
        android:id="@+id/individual_entry_heatcyclus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/individual_spinner_sex"
        android:layout_alignLeft="@id/individual_label_heatcyclus"
        android:minEms="2"
        android:maxLength="2"
        android:inputType="number"
        />
   
    <TextView
        android:id="@+id/individual_label_lactationnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/individual_label_sex"
        android:layout_alignParentRight="true"
        android:text="@string/individual_label_lactationnr" />

   <EditText
        android:id="@+id/individual_entry_lactationnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/individual_spinner_sex"
        android:layout_alignLeft="@id/individual_label_lactationnr"
        android:minEms="2"
        android:maxLength="2"
        android:inputType="number"
        />


</RelativeLayout>